--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>KAE TRAVELANDTOUR</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
         <a class="navbar-brand mr-2" href="#"><img src="./images/globe.svg"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -57,40 +57,11 @@
         <p class="lead">Kae® Travel are committed to providing family-friendly travel options.</p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
       </div>
-
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./images/image1.jpg" class="d-block w-100" alt="...">
-
-          </div>
-          <div class="carousel-item">
-            <img src="images/image2.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="./images/image3.jpg" class="d-block w-100" alt="...">
-          </div>
-        </div>
-
-        <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </button>
-      </div>
       <div class="container mt-4">
         <h2 class="hero-tex">Featured travel deals</h2>
         <p>Save on hotel deals when you book this month.</p>
         <div class="row">
-            <div class="col-sm-6 col-md-3 col-xl-4">
+            <div class="col-sm">
                 <div class="card" style="width: 18rem;">
                     <img src="./images/downland1.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -100,7 +71,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-sm-6 col-md-3 col-xl-4">
+            <div class="col-sm">
                 <div class="card" style="width: 18rem;">
                     <img src="./images/downland2.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -112,7 +83,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-sm-6 col-md-3 col-xl-4">
+            <div class="col-sm">
                 <div class="card" style="width: 18rem;">
                     <img src="./images/downland3.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -129,7 +100,7 @@
 
       <div id='row-cat' class="container mt-3">
         <div class="row">
-          <div class="col-sm-6 col-md-3 col-xl-4 col-6">
+          <div class="col-6">
             <img src="./images/2064-1596631810-3-thumb.jpeg" width="450" class="mt-3">
             <p>
             Europe, italy, campania, naples, gulf of naples<br> mediterranean, tyrrhenian sea</p>
@@ -150,7 +121,7 @@
         </div>
         <div id="row-cat" class="container mt-3">
             <div class="row">
-              <div class=" col-sm-6 col-md-3 col-xl-4 col-6">
+              <div class="col-6">
                 <img src="./images/ihgor-enrollment-brand-homepage1-1440x720.jpeg" width="450" class="mt-3">
               </div>
               <div class="col-6">
