--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>KAE TRAVELANDTOUR</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-lg">
         <a class="navbar-brand mr-2" href="#"><img src="./images/globe.svg"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -51,41 +55,53 @@
                   <a class="dropdown-item" href="#">Ghana</a>
                   </div>
               </li>
+            </div>
       </nav>
-      <div class="jumbotron mt-1">
-        <h1 class="display-4">KAE TRAVEL TOUR</h1>
+      <div class="jumbotron mt-0">
+        <h1 class="display-4">SAVE ON YOUR NEXT HOLIDAY WITH KAES</h1>
         <p class="lead">Kae® Travel are committed to providing family-friendly travel options.</p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
       </div>
-      <div class="container mt-4">
-        <h2 class="hero-tex">Featured travel deals</h2>
-        <p>Save on hotel deals when you book this month.</p>
+      <div class="container-lg mt-4">
+        <h2 class="hero-tex mb-0">Featured travel deals</h2>
+        <p class="mb-0">Save on hotel deals when you book this month.</p>
         <div class="row">
-            <div class="col-sm">
-                <div class="card" style="width: 18rem;">
-                    <img src="./images/downland1.jpeg" class="card-img-top" alt="...">
+            <div class="col-sm-3 col-md-6 col-lg-3">
+                <div class="card">
+                    <img src="./images/downland1.jpeg" class="card-img-top" alt="..." height="128">
                     <div class="card-body">
-                      <h5 class="card-title">Stay for Less – Faster</h5>
-                      <p class="card-text">Save with as few as 5,000 points<br>when you book with points & cash.</p>
+                      <h5 class="card-title">Earn up to 5,000 bonus points per stay</h5>
+                      <p class="card-text">Get rewards faster by booking an<br> Kae® One Rewards Bonus Points<br>
+                        Package. You can earn additional Points</p>
                       <a href="#" class="btn btn-primary">BOOK NOW</a>
                     </div>
                   </div>
             </div>
-            <div class="col-sm">
-                <div class="card" style="width: 18rem;">
-                    <img src="./images/downland2.jpeg" class="card-img-top" alt="...">
+            <div class="col-sm-3 col-md-6 col-lg-3">
+              <div class="card">
+                  <img src="./images/downland3.jpeg"class="card-img-top" alt="..." height="128">
+                  <div class="card-body">
+                    <h5 class="card-title">Earn up to 5,000 bonus points per stay</h5>
+                    <p class="card-text">Get rewards faster by booking an<br> Kae® One Rewards Bonus Points<br>
+                      Package.</p>
+                    <a href="#" class="btn btn-primary">SHOP HERE</a>
+                  </div>
+                </div>
+          </div>
+            <div class="col-sm-3 col-md-6 col-lg-3">
+                <div class="card">
+                    <img src="./images/downland3.jpeg"class="card-img-top" alt="..." height="128">
                     <div class="card-body">
-                      <h5 class="card-title">Find a perfect gift</h5>
-                      <p class="card-text">From gift cards to unique travel,<br>destinations, our new rewards<br>
-                        catalogue is full of ideas and<br>experiences for you to enjoy.<br>
-                    </p>
-                      <a href="#" class="btn btn-primary">SHOP OUR CATALOGUE</a>
+                      <h5 class="card-title">Earn up to 5,000 bonus points per stay</h5>
+                      <p class="card-text">Get rewards faster by booking an<br> Kae® One Rewards Bonus Points<br>
+                        Package. You can earn additional Points</p>
+                      <a href="#" class="btn btn-primary">BOOK NOW</a>
                     </div>
                   </div>
             </div>
-            <div class="col-sm">
-                <div class="card" style="width: 18rem;">
-                    <img src="./images/downland3.jpeg" class="card-img-top" alt="...">
+            <div class="col-sm-3 col-md-6 col-lg-3">
+                <div class="card">
+                    <img src="./images/ihg-app-download-offers-768x432.jpeg" class="card-img-top" alt="..." height="128">
                     <div class="card-body">
                       <h5 class="card-title">Earn up to 5,000 bonus points per stay</h5>
                       <p class="card-text">Get rewards faster by booking an<br> Kae® One Rewards Bonus Points<br>
@@ -98,14 +114,14 @@
     </div>
 
 
-      <div id='row-cat' class="container mt-3">
+        <div id="dealoftheday" class="container-lg mt-3 sm md lg d-block ">
         <div class="row">
-          <div class="col-6">
+          <div class="col-sm-6 col-md-6 ">
             <img src="./images/2064-1596631810-3-thumb.jpeg" width="450" class="mt-3">
             <p>
             Europe, italy, campania, naples, gulf of naples<br> mediterranean, tyrrhenian sea</p>
           </div>
-          <div class="col-6">
+          <div class="col-sm-6 ">
             <section>
                 <h1>Naples</h1>
                 <h2>
@@ -119,12 +135,13 @@
           </div>
         </div>
         </div>
-        <div id="row-cat" class="container mt-3">
+        </div>
+        <div id="row-cat" class="container-lg mt-3">
             <div class="row">
-              <div class="col-6">
+              <div class="col-sm-6 col-md-6">
                 <img src="./images/ihgor-enrollment-brand-homepage1-1440x720.jpeg" width="450" class="mt-3">
               </div>
-              <div class="col-6">
+              <div class="col-sm-6 ">
                 <section class="hero">
                     <h1>It's better to be a member</h1>
                     <ul>
@@ -138,41 +155,61 @@
               </div>
             </div>
             </div>
-            <div class="container mt-4">
-                <h2 class="hero-tex">We're there when plans change</h2>
+            <div id='hero-body' class="container-lg">
+                <h2 class="hero-tex mb-0">We're there when plans change</h2>
                 <div class="row">
-                    <div class="col-sm">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./images/kid1.jpeg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Kids Stay and Eat Free</h5>
-                              <p class="card-text">Kaes® travel are committed<br>to providing family-friendly travel<br>options.</p>
-                              <a href="#" class="btn btn-primary">DISCOVER MORE</a>
-                            </div>
+                  <div class="col-sm-3 col-md-6 col-lg-3">
+                      <div class="card">
+                          <img src="./images/downland1.jpeg" class="card-img-top" alt="..." height="128">
+                          <div class="card-body">
+                            <h5 class="card-title">Earn up to 5,000 bonus points per stay</h5>
+                            <p class="card-text">Get rewards faster by booking an<br> Kae® One Rewards Bonus Points<br>
+                              Package. You can earn additional Points</p>
+                            <a href="#" class="btn btn-primary">BOOK NOW</a>
                           </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./images/kids2.jpeg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Settle in Europe</h5>
-                              <p class="card-text">There’s plenty of room to eat, drink,<br>work and relax.</p>
-                              <a href="#" class="btn btn-primary">DISCOVER MORE</a>
-                            </div>
-                          </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./images/kids3.jpeg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Download the Kaes® App</h5>
-                              <p class="card-text">Find and book hotels - plus, all the<br> benefits of booking direct.</p>
-                              <a href="#" class="btn btn-primary">GET THE APP NOW</a>
-                            </div>
-                          </div>
-                    </div>
+                        </div>
                   </div>
+                  <div class="col-sm-3 col-md-6 col-lg-3">
+                    <div class="card">
+                        <img src="./images/downland3.jpeg"class="card-img-top" alt="..." height="128">
+                        <div class="card-body">
+                          <h5 class="card-title">Earn up to 5,000 bonus points per stay</h5>
+                          <p class="card-text">Get rewards faster by booking an<br> Kae® One Rewards Bonus Points<br>
+                            Package.</p>
+                          <a href="#" class="btn btn-primary">SHOP HERE</a>
+                        </div>
+                      </div>
+                </div>
+                  <div class="col-sm-3 col-md-6 col-lg-3">
+                      <div class="card">
+                          <img src="./images/downland3.jpeg"class="card-img-top" alt="..." height="128">
+                          <div class="card-body">
+                            <h5 class="card-title">Earn up to 5,000 bonus points per stay</h5>
+                            <p class="card-text">Get rewards faster by booking an<br> Kae® One Rewards Bonus Points<br>
+                              Package. You can earn additional Points</p>
+                            <a href="#" class="btn btn-primary">BOOK NOW</a>
+                          </div>
+                        </div>
+                  </div>
+                  <div class="col-sm-3 col-md-6 col-lg-3">
+                      <div class="card">
+                          <img src="./images/ihg-app-download-offers-768x432.jpeg" class="card-img-top" alt="..." height="128">
+                          <div class="card-body">
+                            <h5 class="card-title">Earn up to 5,000 bonus points per stay</h5>
+                            <p class="card-text">Get rewards faster by booking an<br> Kae® One Rewards Bonus Points<br>
+                              Package. You can earn additional Points</p>
+                            <a href="#" class="btn btn-primary">BOOK NOW</a>
+                          </div>
+                        </div>
+                  </div>
+                </div>
             </div>
+            <footer class="bg-light text-center text-lg-start mt-3">
+                <!-- Copyright -->
+                <div class="text-center p-3">
+                  © 2022 Copyright:
+                  <a class="text-dark" href="https://google.com/">kaestravel.com</a>
+                </div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
